# Interpreter

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.JSON  Interpreter.code-workspace  README.md
.github/workflows/: cmake-multi-platform.yml
src/: AbstractScanner.cpp  AstPrinter.cpp  Binary.cpp  CMakeLists.txt  Environment.cpp  Errors.cpp  InputScanner.cpp  Interpreter.cpp  Object.cpp  Object.h  Parser.cpp  Scanner.cpp  Scanner.h  Scanner.hpp  Token.cpp  Token.h  Token.hpp  bisayaPP.cpp  cpplox.cpp  interpreter.cpp  lox.cpp  main.cpp  utility.cpp
src/Abstract Syntax Tree/: Binary.cpp  Binary.h  Binary.hpp  Expr.h  Expr.hpp  Stmt.hpp
src/Headers/: AbstractScanner.hpp  AstPrinter.hpp  Binary.hpp  Environment.hpp  Errors.hpp  Expr.hpp  InputScanner.hpp  Interpreter.hpp  ParseError.hpp  Parser.hpp  Scanner.hpp  Stmt.hpp  Token.hpp  bisayaPP.hpp  interpreter.hpp
src/Headers/Lib/: utility.hpp
test/: declare.bsy  forLoop.bsy  logicalExpr.bsy  print.bsy  scope.bsy
tests/: CMakeLists.txt  test.cc  test.cpp  utils.cpp
tests/includes/: additionalFeature.hpp  declare.hpp  forLoop.hpp  ifStatements.hpp  increment.hpp  increment2.hpp  increment3.hpp  input.hpp  samplePrograms.hpp  scope.hpp  shortCircuit.hpp  utils.hpp  whileLoop.hpp
tests/source_files/: dawattest.bsy  declare.bsy  forLoop.bsy  print.bsy  scope.bsy
tests/source_files/Additional Feature (While)/: Test Case 1.bpp  Test Case 2.bpp
tests/source_files/Declarations/: declare_2.bsy
tests/source_files/If Statements/: if1.bsy  if2.bsy
tests/source_files/Increment/: Test Case 1.bpp  Test Case 10.bpp  Test Case 11.bpp  Test Case 12.bpp  Test Case 13.bpp  Test Case 14.bpp  Test Case 4.bpp  Test Case 6.bpp  Test Case 7.bpp  Test Case 8.bpp  Test Case 9.bpp
tests/source_files/Increment 2/: Test Case 1.bpp  Test Case 2.bpp  Test Case 4.bpp  Test Case 5.bpp
tests/source_files/Increment 3/: Test Case 1.bpp  Test Case 2.bpp  Test Case 3.bpp  Test Case 4.bpp  Test Case 6.bpp  Test Case 7.bpp
tests/source_files/Input/: dawattest.bsy
tests/source_files/Loops/: forLoop.bsy  whileLoop.bsy
tests/source_files/Sample Programs/: 1-2-1.txt  basic11.bpp  basic2.bpp  basic4.bpp  basic5.bpp  basic6.bpp  basic7.bpp  basic9.bpp  sample_program_1.bsy  sample_program_2.bsy  sample_program_3.bsy
tests/source_files/Scopes/: scope.bsy
tool/: CMakeLists.txt  generateAst.cpp  generateAst.h  generateAst.hpp  main.cpp
